@@ -3,7 +3,6 @@ package es.upm.miw.apaw_practice.adapters.mongodb.film.entities;
 import es.upm.miw.apaw_practice.domain.models.film.Film;
 import es.upm.miw.apaw_practice.domain.models.film.Genre;
 import es.upm.miw.apaw_practice.domain.models.film.Review;
-import org.springframework.beans.BeanUtils;
 import org.springframework.data.annotation.Id;
 import org.springframework.data.mongodb.core.mapping.DBRef;
 import org.springframework.data.mongodb.core.mapping.Document;
@@ -11,7 +10,6 @@ import org.springframework.data.mongodb.core.mapping.Document;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Document
 public class FilmEntity {
@@ -93,10 +91,10 @@ public class FilmEntity {
     public Film toFilm() {
         List<Genre> genres = this.genreEntities.stream()
                 .map(GenreEntity::toGenre)
-                .collect(Collectors.toList());
+                .toList();
         List<Review> reviews = this.reviewEntities.stream()
                 .map(ReviewEntity::toReview)
-                .collect(Collectors.toList());
+                .toList();
         Film film = new Film(id, title, synopsis, directorEntity.toDirector());
         film.setGenres(genres);
         film.setReviews(reviews);
